# ShoDi

./: .gitignore  AMOD_README.md  CMakeLists.txt  Doxyfile  FORMATS.md  LICENSE  Makefile  README.md  project.cppcheck
Python/: README.md  setup.py  transformGeoJSONtoDIMACS.py  transformGeoJSONtoFloatingPointXenGraph.py  transformGeoJSONtoIntegerXenGraph.py  transformGeoJSONtoXenGraph.py
Python/jupyter/: Generate Queries.ipynb  Untitled.ipynb
Python/scripts/: benchmark_plot.py  benchmark_run.py  transformGeoJSONtoDIMACS.py  transformGeoJSONtoXenGraph.py
Python/shortestdistances/: __init__.py  inout.py
Python/shortestdistances.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
csv-parser/: Makefile  cmake_install.cmake  csv.cbp
csv-parser/programs/: Makefile  cmake_install.cmake
data/functest/: 01.ch  01_2.tgaf  01_2.tnrg  01_3.tgaf  01_3.tnrg  01_dimacs.gr  01_div2.ch  01_mapping.txt  01_xengraph.xeng  02.ch  02_1_div100.tgaf  02_1_div100.tnrg  02_2_div100.tgaf  02_2_div100.tnrg  02_3_div100.tgaf  02_3_div100.tnrg  02_adj.csv  02_dimacs.gr  02_div100.ch  02_div3.ch  02_dm.csv  02_dm_div100.csv  02_dm_div2.csv  02_mapping.txt  02_xengraph.xeng  03_adj.csv  03_dimacs.gr  03_xengraph.xeng
data/test/: adj.csv  dm.csv  test_1_gt.tgaf  test_1_gt.tnrg
dependencies/fast-cpp-csv-parser/: csv.h
functest/: ch_test.cpp  common.cpp  common.h  dm_test.cpp  dm_test_hdf.cpp  expected_graphs.cpp  expected_graphs.h  tnr_test.cpp  tnraf_test.cpp
javatests/: README.md  pom.xml  testGraphMapping.xeni  testQueries.txt  testQueriesOriginalIDs.txt  testTrueDistances.txt  testTrueDistancesMapping.txt
javatests/data/: PragueCH.ch  PragueMapping.xeni  Prague_map_5000randomTrips.txt  Prague_map_5000trueDistances.txt  Prague_map_int.ch  test15queries.txt  test15reference.txt  test5000queries.txt  test5000reference.txt  testCHGraph.chf  testGraphMapping.xeni
prebuilt/linux-x86-64/: shortestPathsPreprocessor
prebuilt/win-x86-64/: shortestPaths.exp  shortestPaths.lib
src/: aliases.h  benchmark.h  benchmark_runner.cpp  constants.h  inout.cpp  inout.h  logging.cpp  logging.h  main.cpp  memory.cpp  memory.h  progress_bar.h  tests.cpp  thesisTestScenarios.cpp
src/API/: CHDistanceQueryManagerAPI.cpp  CHDistanceQueryManagerAPI.h  CHDistanceQueryManagerAPI.i  CHDistanceQueryManagerNoMappingAPI.cpp  CHDistanceQueryManagerNoMappingAPI.h  CHDistanceQueryManagerNoMappingAPI.i  CHinterface.i  CHinterface_wrap.cxx  DistanceQueryManagerAPI.cpp  DistanceQueryManagerAPI.h  DistanceQueryManagerAPI.i  DistanceQueryManagerAPI_wrap.cxx  DistanceQueryManagerWithMappingAPI.cpp  DistanceQueryManagerWithMappingAPI.h  DistanceQueryManagerWithMappingAPI.i  FPointDistanceQueryManagerAPI.cpp  FPointDistanceQueryManagerAPI.h  FPointDistanceQueryManagerAPI.i  FPointDistanceQueryManagerWithMappingAPI.cpp  FPointDistanceQueryManagerWithMappingAPI.h  FPointDistanceQueryManagerWithMappingAPI.i  IntegerDistanceQueryManagerAPI.cpp  IntegerDistanceQueryManagerAPI.h  IntegerDistanceQueryManagerAPI.i  IntegerDistanceQueryManagerWithMappingAPI.cpp  IntegerDistanceQueryManagerWithMappingAPI.h  README.md  Readme.txt  TNRAFDistanceQueryManagerAPI.cpp  TNRAFDistanceQueryManagerAPI.h  TNRAFDistanceQueryManagerAPI.i  TNRDistanceQueryManagerAPI.cpp  TNRDistanceQueryManagerAPI.h  TNRDistanceQueryManagerAPI.i  generateSWIGcode.sh  generateSharedLib.sh  shortestPathsInterface.i  shortestPathsInterface_wrap.cxx
src/Astar/: Astar.cpp  Astar.h  AstarNode.cpp  AstarNode.h
src/Benchmarking/: AstarBenchmark.cpp  AstarBenchmark.h  CHBenchmark.cpp  CHBenchmark.h  CHBenchmarkWithRanks.cpp  CHBenchmarkWithRanks.h  CorectnessValidator.cpp  CorectnessValidator.h  CorrectnessValidator.cpp  CorrectnessValidator.h  DijkstraBenchmark.cpp  DijkstraBenchmark.h  DistanceCorrectnessValidator.cpp  DistanceCorrectnessValidator.h  DistanceMatrixBenchmark.cpp  DistanceMatrixBenchmark.h  IntegerCHBenchmark.cpp  IntegerCHBenchmark.h  IntegerCorrectnessValidator.cpp  IntegerDijkstraBenchmark.cpp  IntegerDijkstraBenchmark.h  LocationTransformer.cpp  LocationTransformer.h  PathCorrectnessValidator.cpp  PathCorrectnessValidator.h  TNRAFBenchmark.cpp  TNRAFBenchmark.h  TNRBenchmark.cpp  TNRBenchmark.h  memory.cpp  memory.h
src/CH/: CHAlternativeQueryManger.cpp  CHAlternativeQueryManger.h  CHDistanceQueryManager.cpp  CHDistanceQueryManager.h  CHDistanceQueryManager.tpp  CHDistanceQueryManagerWithMapping.cpp  CHDistanceQueryManagerWithMapping.h  CHFlagsGraphQueryManager.cpp  CHFlagsGraphQueryManager.h  CHMyCHVersionNewQueryManager.cpp  CHMyCHVersionNewQueryManager.h  CHPathQueryManager.cpp  CHPathQueryManager.h  CHPreprocessor.cpp  CHPreprocessor.h  CHQueryManager.cpp  CHQueryManager.h  CHQueryManagerWithRanks.cpp  CHQueryManagerWithRanks.h  ContractionHierarchy.cpp  ContractionHierarchy.h  EdgeDifferenceManager.cpp  EdgeDifferenceManager.h  IntegerCHDistanceQueryManager.cpp  IntegerCHDistanceQueryManager.h  IntegerCHDistanceQueryManagerWithMapping.cpp  IntegerCHDistanceQueryManagerWithMapping.h  IntegerCHPathQueryManager.cpp  IntegerCHPathQueryManager.h  IntegerCHPreprocessor.cpp  IntegerCHPreprocessor.h
src/CLI/: ProgressBar.cpp  ProgressBar.hpp
src/Dijkstra/: BasicDijkstra.cpp  BasicDijkstra.h  BasicIntegerDijkstra.h  DijkstraNode.cpp  DijkstraNode.h
src/DistanceMatrix/: CSV_reader.cpp  CSV_reader.h  DistanceMatrix.cpp  DistanceMatrix.h  DistanceMatrixComputor.cpp  DistanceMatrixComputor.h  DistanceMatrixComputorFast.cpp  DistanceMatrixComputorFast.h  DistanceMatrixComputorFast.tpp  DistanceMatrixComputorSlow.cpp  DistanceMatrixComputorSlow.h  DistanceMatrixComputorSlow.tpp  DistanceMatrixCsvOutputter.cpp  DistanceMatrixCsvOutputter.h  DistanceMatrixCsvOutputter.tpp  DistanceMatrixHdfOutputter.cpp  DistanceMatrixHdfOutputter.h  DistanceMatrixHdfOutputter.tpp  DistanceMatrixInterface.h  DistanceMatrixOutputter.h  DistanceMatrixXdmOutputter.cpp  DistanceMatrixXdmOutputter.h  DistanceMatrixXdmOutputter.tpp  (+14 more)
test/: Simple_tests.cpp  ch_tests.cpp  common.cpp  common.h  dm_test.cpp  tnr_tests.cpp  tnraf_tests.cpp
thesisTestsData/: Prague.xeng
(+297 files in other folders)
